syntax = "proto3";

// 包，将多个文件组合在一起的方式
package pb;

// 导入包
import "user.proto";
import "google/protobuf/timestamp.proto";

// 指定生成的代码在pb文件夹内
option go_package = "GoBank/pb";

// 定义消息
// 类型 变量名 = 字段号;    字段号位唯一标识
message LoginUserRequest {
    string username = 1;
    string password = 2;
}

message LoginUserResponse {
    User username = 1;
    string session_id = 2;
    string access_token = 3;
    string refresh_token = 4;
    google.protobuf.Timestamp access_token_expire_at = 5;
    google.protobuf.Timestamp refresh_token_expire_at = 6;
}